# c_algorithms

./: CMakeLists.txt  README.md  binary_search.c  binary_search.h  bubble_sort.c  bubble_sort.h  linear_search.c  linear_search.h  merge_sort.c  merge_sort.h  print_array.c  print_array.h  selection_sort.c  selection_sort.h  test_binary_search.c  test_bubble_sort.c  test_linear_search.c  test_merge_sort.c  test_selection_sort.c
